--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
@@ -17,11 +18,11 @@
     "clsx": "^2.1.1",
     "geist": "^1.2.1",
     "lucide-react": "^0.436.0",
-    "next": "latest",
+    "next": "^15.0.2",
     "next-themes": "^0.3.0",
     "prettier": "^3.3.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "20.10.6",
